blt/addons/orthanc-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: orthanc
  namespace: chris-3114b1
  labels:
    app.kubernetes.io/name: orthanc
spec:
  to:
    kind: Service
    name: chris-orthanc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: http
  host: blt-orthanc.apps.shift.nerc.mghpcc.org
